tests/ui/missing_capture.rs
use join_me_maybe::join;

#[tokio::main]
async fn main() {
    join!(
        async {} => (),
    );
}
